# mySQLClient

./: CMakeLists.txt  data.cpp  dialogs.h  helpers.cpp  helpers.h  main.cpp  mainwindow.cpp  settings.cpp  settings.h  test.cpp  test.h  util.cpp  util.h
app/: CMakeLists.txt  main.cpp
config/: settings.config
doc/: mySQLClient_class_diagram.odg
include/: data.h  dialogs.h  helpers.h  mainwindow.h  manager.h  model.h  settings.h  util.h
src/: CMakeLists.txt  data.cpp  dialogs.cpp  mainwindow.cpp  manager.cpp  model.cpp  settings.cpp  util.cpp
test/: CMakeLists.txt  test.cpp  test.h
